# mcp-server-ai-tools

./: .env.example  .gitignore  Dockerfile  MCP_SERVER_SPEC.md  ONBOARDING.md  docker-compose.yml  nginx.conf.snippet  pyproject.toml  requirements.txt
examples/: framework_agent.py
src/: config.py  server.py
src/clients/: bitbucket_client.py  confluence_client.py  grafana_client.py  jira_client.py  ollama_client.py
src/middleware/: auth.py  logging.py
src/tools/: bitbucket_tools.py  confluence_tools.py  grafana_tools.py  infra_tools.py  jira_tools.py  log_tools.py
tests/: test_confluence_tools.py  test_jira_tools.py  test_log_tools.py
